fix: Tag API Refactoring